testsuite/tests/quantified-constraints/T21006.stderr
T21006.hs:14:10: error: [GHC-05617]
    • Could not solve: ‘forall b (c :: Constraint).
                        (Determines b, Determines c) =>
                        c’
        arising from the superclasses of an instance declaration
    • In the instance declaration for ‘OpCode’

